# enterprise-rag-pipeline

./: .gitignore  README.md  pyproject.toml
docs/: enterprise-rag-build-notes.md
src/enterprise_rag/: chunk_documents.py  chunk_store.py  chunker.py  document_store.py  documents.py  embed_chunks.py  embedding_store.py  evaluate_retrieval.py  langchain_adapters.py  search_chunks.py  search_hybrid.py  search_vectors.py
src/enterprise_rag/embeddings/: __init__.py  huggingface.py  models.py  providers.py
src/enterprise_rag/evaluation/: dataset.py  models.py  retrieval_eval.py
src/enterprise_rag/retrieval/: __init__.py  bm25.py  hybrid.py  models.py  tokenizer.py
src/enterprise_rag/vector_store/: __init__.py  hnsw.py  indexes.py  loaders.py  models.py
src/enterprise_rag/wikipedia/: converter.py  dump_reader.py  ingest.py
tests/: test_bm25_retrieval.py  test_chunk_documents.py  test_chunker.py  test_documents.py  test_embed_chunks.py  test_embedding_models.py  test_embedding_store.py  test_hnsw_vector_index.py  test_huggingface_embedding_provider.py  test_hybrid_retrieval.py  test_langchain_adapters.py  test_project_setup.py  test_retrieval_eval.py  test_retrieval_eval_dataset.py  test_vector_store_models.py  test_wikipedia_converter.py  test_wikipedia_dump_reader.py
