[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=1.1,<2",
  "langchain-text-splitters>=1.0,<2",
  "rank-bm25>=0.2.2,<1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
gemini = [
  "langchain-google-genai>=4.2,<5",
]
huggingface = [
  "sentence-transformers>=5.1,<6",
  "truststore>=0.10,<1",
]
vector = [
  "hnswlib>=0.8,<1",
  "numpy>=1.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
